        ====== rnumber release 1.20.3 (v1_20_3) on Linux (cde-tx32-lc002) ======

        ====== rnumber release 1.20.3 (v1_20_3) on Linux (cde-tx32-lc002) ======

        ========= rnumber release 1.20.3 (v1_20_3) on Linux (petra20) =========

        ========= rnumber release 1.20.3 (v1_20_3) on Linux (petra20) =========

         rnumber release 1.20.3 (v1_20_3) on SunOS (ellis.somerset.sps.mot.com) 

         rnumber release 1.20.3 (v1_20_3) on SunOS (ellis.somerset.sps.mot.com) 

         rnumber release 1.20.3 (v1_20_3) on SunOS (ellis.somerset.sps.mot.com) 

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0025) =====

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0025) =====

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0025) =====

         rnumber release 1.20.3 (v1_20_3) on SunOS (ellis.somerset.sps.mot.com) 

         rnumber release 1.20.3 (v1_20_3) on SunOS (ellis.somerset.sps.mot.com) 

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0004) =====

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0004) =====

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0004) =====

        ===== rnumber release 1.20.3 (v1_20_3) on SunOS (cde-tx32-gb0004) =====

2003-10-13  Brian Kahne  <bkahne@ibmoto.com>

	* configure.in: Debug info is now included with optimized builds
	so that installed libraries can be debugged.

        ============== rnumber release 1.20.2 (v1_20_2) on SunOS ==============

        ============== rnumber release 1.20.2 (v1_20_2) on SunOS ==============

        ============== rnumber release 1.20.2 (v1_20_2) on SunOS ==============

        ============== rnumber release 1.20.2 (v1_20_2) on SunOS ==============

        ============== rnumber release 1.20.2 (v1_20_2) on SunOS ==============

        ============== rnumber release 1.20.2 (v1_20_2) on SunOS ==============
