@@ -3,7 +3,7 @@ AC_INIT(src/RNumber.C)
 
 RNUMBER_MAJOR_VERSION=1
 RNUMBER_MINOR_VERSION=20
-RNUMBER_MICRO_VERSION=3
+RNUMBER_MICRO_VERSION=4
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
 RNUMBER_VERSION=$RNUMBER_MAJOR_VERSION.$RNUMBER_MINOR_VERSION.$RNUMBER_MICRO_VERSION
@@ -19,73 +19,16 @@ VERSION=$RNUMBER_VERSION
 PACKAGE=rnumber
 
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
-
 AM_CONFIG_HEADER(config.h)
-
-OS=`/usr/bin/env uname`
-
-#########################################################################
-#  Configure arguments 
-#########################################################################
-
 AM_MAINTAINER_MODE
 AC_PROG_RANLIB
 AC_PROG_CC
 AC_PROG_CPP
-AM_PROG_LEX
-AC_PROG_YACC
+AM_CPP_SETUP
 
-AC_ARG_ENABLE(opt,
-[  --enable-opt    Enable optimization flag (-O3), disables debug],
- OPT="$CXXFLAGS -O3"
- AC_MSG_RESULT("Optimizing with -O3"),
-)
-
-ARCH=`/usr/bin/env uname -m`
-if test x$ARCH = xi686 ; then
-   DYNLINK=
-else
-   DYNLINK="-fPIC"
-fi
-
-AC_ARG_ENABLE(static,
-[  --enable-static    Enable static building],
- DYNLINK=""
- AC_MSG_RESULT([Static build selected.]),
-)
-
-PROFILE=
-AC_ARG_ENABLE(profile,
-[  --enable-profile    Enable profiling],
- PROFILE="-pg"
- AC_MSG_RESULT("Profiling with -pg")
- if test x$OS = xSunOS ; then
-   echo "Turning off position-independent code b/c we're on Solaris and we are profiling."
-   DYNLINK=
- fi,
-)
-
-default_efence="/nfs/ibmoto/tools/tlv4/raptor/lib/obj.SunOS/libefence.a"
-
-AC_ARG_ENABLE(efence,
-[  --enable-efence=<location>    link test programs with electric fence. If no location
-                                 is given, /nfs/ibmoto/tools/tlv4/raptor/lib/obj.SunOS/libefence
-                                 is used],
- if test x$enableval = x; then
-   EFENCE=$default_efence
- else
-   EFENCE=$enableval
- fi
- if test -f $EFENCE; then
-   AC_MSG_RESULT([using '$EFENCE' for electric fence])
- else
-   AC_MSG_ERROR(electric fence could not be found as file $EFENCE)
- fi
-AC_MSG_RESULT(linking with electric fence - $EFENCE),
-EFENCE=""
-AC_MSG_RESULT(efence will not be used)
-)
-AC_SUBST(EFENCE)
+#########################################################################
+#  Configure arguments 
+#########################################################################
 
 web_stuff=0
 WEB_HOME=./web-home
@@ -104,59 +47,6 @@ AC_ARG_ENABLE(web-home,
 
 AM_CONDITIONAL(WEB_STUFF, test x$web_stuff = xtrue)
 AC_SUBST(WEB_HOME)
-
-
-dnl add flex prefix/include to includes
-AC_MSG_CHECKING( for flex prefix )
-
-dnl set ac_flex_prefix to prefix of path to flex
-dnl this was generated by running this first with
-dnl AC_PREFIX_PROGRAM(flex) and then copying the
-dnl output of the test from the resulting configure
-dnl and hand editing it
-dnl # Extract the first word of "flex", so it can be a program name with args.
- set dummy flex; ac_word=$2
- case "$FLEX" in
- /*)
- ac_cv_path_FLEX="$FLEX" # Let the user override the test with a path.
- ;;
- ?:/*)                    
- ac_cv_path_FLEX="$FLEX" # Let the user override the test with a dos path.
- ;;
- *)
- IFS="${IFS=     }"; ac_save_ifs="$IFS"; IFS=":"
- ac_dummy="$PATH"
- for ac_dir in $ac_dummy; do 
-   test -z "$ac_dir" && ac_dir=.
-   if test -f $ac_dir/$ac_word; then
-     ac_cv_path_FLEX="$ac_dir/$ac_word"
-    ac_flex_prefix=`echo $ac_dir|sed 's/\/bin$//'`
-     break
-   fi
- done
- IFS="$ac_save_ifs"
- ;;
- esac
- FLEX="$ac_cv_path_FLEX"
- if test -n "$FLEX"; then
-   echo "$ac_t""$FLEX" 1>&6
- else
-   echo "$ac_t""no" 1>&6
- fi
-
- if test -n "$ac_cv_path_FLEX"; then
-      ac_flex_prefix=`echo $ac_cv_path_FLEX|sed 's%/[^/][^/]*//*[^/][^/]*$%%'`
-      ac_flex_prefix=$ac_dir
- fi
-
-ac_flex_prefix=${FLEX%flex}/..
-AC_MSG_CHECKING(for FlexLexer.h in $ac_flex_prefix/include)
-if test -f $ac_flex_prefix/include/FlexLexer.h
-then
-  AC_MSG_RESULT(found)
-else
-  AC_MSG_ERROR([FlexLexer.h could not be found, it is required])
-fi
 
 dnl On FreeBSD 3.0 (and perhaps some other systems) GNU m4 is
 dnl called `gm4' where `m4' is the system's own m4.
@@ -275,257 +165,7 @@ dnl moved the c++ compiler alittle to make the basename check work right..
 AC_PROG_CXX
 AC_LANG_CPLUSPLUS
 
-AC_MSG_CHECKING(if C++ compiler uses namespaces)
-AC_TRY_COMPILE(
-[
-#include <iostream>
-namespace std{}
-using namespace std;
-],[
-cout << "test" << endl;
-],[
- ac_namespaces=yes
- AC_DEFINE(RNUMBER_CXX_HAVE_NAMESPACES,1,/*namespaces*/)
-],[
- ac_namespaces=maybe
-])
-AC_MSG_RESULT([$ac_namespaces]) 
-
-
-if test "x$ac_namespaces" = xmaybe ; then
-AC_MSG_CHECKING(if C++ has namespaces - 2nd try)
-AC_TRY_COMPILE(
-[
-#include <iostream.h>
-namespace std{}
-using namespace std;
-],[
-cout << "test" << endl;
-],[
- ac_namespaces=yes
- AC_DEFINE(RNUMBER_CXX_HAVE_NAMESPACES,1,/*namespaces*/)
-],[
- ac_namespaces=no
-])
-AC_MSG_RESULT([$ac_namespaces]) 
-
-fi
-
-AC_MSG_CHECKING(if C++ compiler supports bool (required))
-AC_TRY_COMPILE(
-[
-],[
-   bool b=true;
-   bool b1=false;
-],[
-  ac_bool=yes
-],[
-  config_error=yes
-  AC_WARN(bool type is not supported by your compiler)
-]) 
-AC_MSG_RESULT([$ac_bool])
-
-
-AC_MSG_CHECKING(if C++ compiler supports mutable)
-AC_TRY_COMPILE(
-[
-class k {       
-        mutable char *c;
-public:
-   void foo() const { c=0; }
-};
-],[
-],[
-  ac_mutable=yes
-  AC_DEFINE(RNUMBER_CXX_HAVE_MUTABLE, 1, /*have mutable*/)
-],[
-  ac_mutable=no
-]) 
-AC_MSG_RESULT([$ac_mutable])
-
-
-
-AC_MSG_CHECKING([if C++ compiler supports const_cast<> (required)])
-AC_TRY_COMPILE(
-[
-   class foo;
-],[
-   const foo *c=0;
-   foo *c1=const_cast<foo*>(c);
-],[
-  ac_const_cast=yes
-],[
-  AC_WARN(C++ compiler const_cast<> does not work)
-  config_error=yes
-]) 
-AC_MSG_RESULT([$ac_const_cast])
-
-
-AC_MSG_CHECKING(if C++ compiler requires const_cast<> for C decl)
-AC_TRY_COMPILE(
-[
-extern "C"  { void foo(int *f) {return;} };
-void foo2(const int* f) { foo(f);}
-],[
-   const int *i;   foo2(i);
-],[
-  ac_const_cast_required=no
-],[
-  ac_const_cast_required=yes
-])
-AC_MSG_RESULT([$ac_const_cast_required])
-
-
-
-AC_MSG_CHECKING(if C++ compiler supports member templates)
-AC_TRY_COMPILE(
-[
-class foo
-{
-public:
-  template <class T> void method(T t);
-};
-
-template <class T> void foo::method(T t) {t = 0;}
-],[
-],[
-   ac_member_templates=yes
-   AC_DEFINE(RNUMBER_CXX_HAVE_MEMBER_TEMPLATES, 1, /* member templates */)
-   AC_MSG_RESULT([$ac_member_templates])
-],[
-  ac_member_templates=no
-  AC_MSG_RESULT([$ac_member_templates])
-  AC_MSG_WARN([Test for member templates failed. This disables some methods that requires member template support. If your compiler should support member templates, see config.log to figure out why the test failed.])
-])
-
-
-
-AC_MSG_CHECKING(if C++ compiler supports partial specialization)
-AC_TRY_COMPILE(
-[
-template<class T, class K>
-class k {       
-public:
-};
-template<class T> class k<void,T> { };
-],[
-  k<float, float> b;
-  k<void,void> a;
-],[
-  ac_partial_specialization=yes
-  AC_DEFINE(RNUMBER_CXX_HAVE_PARTIAL_SPECIALIZATION, 1, /* partial specialization */)
-],[
-  ac_partial_specialization=no
-]) 
-AC_MSG_RESULT([$ac_partial_specialization])
-
-AC_MSG_CHECKING(if C++ environment has working string class (required))
-AC_TRY_LINK(
-[
-#include <string>
-#ifdef RNUMBER_CXX_HAVE_NAMESPACES
-namespace std{}
-using namespace std;
-#endif /* RNUMBER_CXX_HAVE_NAMESPACES */
-  class foo {
-  public:
-    void f(const string &s);
-  };
-  void foo::f(const string &s) {
-    f(s.c_str());
-  }
-],[
-   foo f1;
-   f1.f("test");
-],[
-  rnumber_string_ok=yes
-],[
-  rnumber_string_ok=no
-  config_error=yes 
-  AC_WARN(C++ compilers string support does not work)
-])
-AC_MSG_RESULT([$rnumber_string_ok])
-
-AC_MSG_CHECKING(if C++ compiler has HP ambiguous template bug)
-AC_TRY_COMPILE(
-[
-struct S
-  {
-     S(int) {};
-     template <class T>
-     S(const T& t) {typename T::foo j;};
-  };
-
-struct P {typedef int foo; };
-
-],[
-    int i;
-    P p;
-    S s1(i);
-    S s2(p);
-],[
-  ac_cxx_ambiguous_templates=no
-],[
-  ac_cxx_ambiguous_templates=yes
-  AC_DEFINE(RNUMBER_CXX_AMBIGUOUS_TEMPLATES, 1, /*ambiguouse templates bug*/)
-])
-AC_MSG_RESULT([$ac_cxx_ambiguous_templates])
-
-
-
-AC_MSG_CHECKING(if C++ compiler has gcc anonymous union bug)
-AC_TRY_RUN([
-struct Bob;
-struct Fred
-  {
-   Bob *b;
-   Bob *emit()       {return b;}
-   Bob *operator()() {return b;}
-  };
-
-struct Bob
-  {
-   int i;
-   int j;
-   union {
-     Bob *self;
-     Fred fred;
-   };
-   Bob():self(this) {}
-  };
-
-int main(int argc,char **argv)
-  {
-   Bob bob;
-   return bob.fred.emit()==bob.fred();
-  }
-],[
-  ac_gcc_au_bug=yes
-  AC_DEFINE(RNUMBER_CXX_GAUB,1, gaub)
-],[
-  ac_gcc_au_bug=no
-],[
-  echo $ac_n "cross compiling; assumed OK... $ac_c"
-  ac_gcc_au_bug=no
-])
-AC_MSG_RESULT([$ac_gcc_au_bug])
-if test "x$ac_gcc_au_bug" = xyes ; then
-  echo "Warning: Your compiler contains a very serious bug which affects"
-  echo "anonymous unions.  This prevents anonymous unions from being used in"
-  echo "proxies.  "
-  echo "Consider upgrading to gcc 2.95."
-fi
-
-AM_CONDITIONAL(AIX, test x`uname  -s` = xAIX)
-
-AC_MSG_CHECKING(if C++ environment provides all required features)
-if test "x$config_error" = xyes ; then
-  AC_MSG_RESULT([no])
-  AC_MSG_ERROR([Your compile environment is not able to compile Rnumber. See config.log for more information of why it failed.])
-fi
-AC_MSG_RESULT([yes])
-
-CXXFLAGS="-Wall -g $OPT $DYNLINK $PROFILE $TEMPLATE_CONTROL"
+CXXFLAGS="-Wall -g $CPPSETUP"
 
 AC_SUBST(PROFILE)
 AC_SUBST(ACLOCAL_FLAGS)
