@@ -1,7 +1,8 @@
 ## Please update this variable if any new macros are created
 MACROS= \
 	std-exceptions.m4 \
-	zlib-check.m4
+	zlib-check.m4 \
+	cpp-setup.m4
 
 EXTRA_DIST = $(MACROS)
 
