@@ -52,7 +52,7 @@ do
     echo processing $directory
     macrodirs=`sed -n -e 's,AM_ACLOCAL_INCLUDE(\(.*\)),\1,gp' < $configure_in`
     ( cd $directory
-      aclocalinclude="$ACLOCAL_FLAGS"
+      aclocalinclude="-I ./macros $ACLOCAL_FLAGS"
       for k in $macrodirs; do
   	if test -d $k; then
           aclocalinclude="$aclocalinclude -I $k"
